# yt-playlist-sync

./: dependencies  pyproject.toml
tests/: test_ytplaylistsync.py
ytplaylistsync/: Config.py  YTPlaylistSync.py  main.py
ytplaylistsync/cli/: CLIParser.py
ytplaylistsync/tools/: YoutubeDLManager.py
ytplaylistsync/ws/: Authentication.py
